--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,10 @@ Thumbs.db
 
 
 # # Ignore PNG files only in the images folder
-# **/images/*.png
+**/images/*.png
 # # Ignore PNG files in img_to_read folder
-# **/img_to_read/*.png 
+**/img_to_read/*.png 
+
+# IGNORE THE CONFIG FILES from utils folder
+**/utils/config/*.py
+
