--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "keyboard>=0.13.5",
     "mss>=10.0.0",
     "opencv-python>=4.11.0.86",
+    "pip>=25.0.1",
     "pyautogui>=0.9.54",
     "pywinauto>=0.6.9",
     "screeninfo>=0.8.1",
